<resources>
	<string name="app_name" translatable="false">EzPermissions</string>
	<string name="welcome_msg">Welcome to EzPermissions</string>
	<string name="package_icon">App Icon</string>
	<string name="list_apps">List apps</string>
	<string name="app_permissions_number">Permissions: %d</string>
	<string name="normal_permissions" translatable="false">&#8226; android.permission.ACCESS_WIFI_STATE\n&#8226; android.permission.VIBRATE\n&#8226; android.permission.WAKE_LOCK\n&#8226; android.permission.SET_WALLPAPER\n&#8226; android.permission.NFC</string>
	<string name="nondangerous_permission">Non dangerous</string>
	<string name="dangerous_permission">Dangerous</string>
	<string name="no_nondangerous_permissions">There aren\'t non dangerous permissions for this app.</string>
	<string name="no_dangerous_permissions">There aren\'t dangerous permissions for this app.</string>
	<string name="no_other_permissions">There aren\'t privileged or signature permissions for this app.</string>
	<string name="permission_summary" translatable="false">Allows an application to call any phone number, including emergency numbers, without going through the Dialer user interface for the user to confirm the call being placed.</string>
	<string name="more_info_summary">More info</string>
	<string name="set_timeout">Time to revoke</string>
	<string name="add_favorites">Add to favorites</string>
	<string name="set_schedule">Set schedule</string>
	<string name="add_others">Add to others</string>
	<string name="ok">OK</string>
	<string name="logo_desc">App logo</string>
	<string name="description">EzPermissions is an application permission manager that will help you to know the permissions used by all the applications installed on your smartphone and will allow you to easily revoke permissions considered dangerous.</string>
	<string name="features"><![CDATA[ &#8226; View all the applications installed on your device.<br /> &#8226; Click on any app in the list to see the details of its permissions, grouped by category.<br /> &#8226; Control access to dangerous permissions for each installed application.<br /> &#8226; Set time intervals to grant temporary access to dangerous permissions per application.<br /> ]]></string>
	<string name="shizuku_alert">To obtain the maximum functionality of the application it is necessary to have installed the app Shizuku.</string>
	<string name="skip">Skip</string>
	<string name="alert">Very important</string>
	<string name="root_icon">Root user icon</string>
	<string name="cancel">Cancel</string>
	<string name="timeout">Choose the wait time to revoke the permission.</string>
	<string name="time">Time:</string>
	<string name="five_minutes">5 minutes</string>
	<string name="ten_minutes">10 minutes</string>
	<string name="fifteen_minutes">15 minutes</string>
	<string name="thirty_minutes">30 minutes</string>
	<string name="one_hour">1 hour</string>
	<string name="two_hours">2 hours</string>
	<string name="six_hours">6 hours</string>
	<string name="twelve_hours">12 hours</string>
	<string name="one_day">1 day</string>
	<string name="custom_time">Select a time…</string>
	<string name="timeout_message">This permission will be revoked in:</string>
	<string name="toast_timeout_message">This permission will be revoked in %d minutes</string>
	<string name="start_service">Start service to grant and revoke dangerous permissions.</string>
	<string name="stop_service">Stop service</string>
	<string name="foreground_service_notification_title">Supervising dangerous permissions.</string>
	<string name="channel_desc">Manage apps\' dangerous permissions</string>
	<string name="channel_name">Service to manage permissions</string>
	<string name="manual_permission_management">For manual management click on the app name.</string>
	<string name="service_desc">This service manages dangerous permissions.</string>
	<string name="permission_protection_level">Protection level: %s</string>
	<string name="no_permission_summary">There is no summary for this permission.</string>
	<string name="favorites_title">Favorites</string>
	<string name="others_title">Others</string>
	<string name="no_shizuku_msg"><![CDATA[You must have installed the app <b>Shizuku</b> in order to grant or revoke dangerous permissions.]]></string>
	<string name="system_app">System App</string>
	<string name="install_shizuku">Install Shizuku</string>
	<string name="fragment_settings">Settings</string>
	<string name="personalisation_header">Personalization</string>
	<string name="app_theme_title">App Theme</string>
	<string name="light_theme">Light</string>
	<string name="dark_theme">Dark</string>
	<string name="os_theme">System default</string>
	<string name="about_header">About EzPermissions</string>
	<string name="developer">Developer</string>
	<string name="version">Version</string>
	<string name="shizuku">Shizuku App</string>
</resources>