<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

	<PreferenceCategory app:title="@string/personalisation_header">

		<ListPreference
			app:defaultValue="-1"
			app:entries="@array/theme_entries"
			app:entryValues="@array/theme_values"
			app:key="app_theme"
			app:title="@string/app_theme_title"
			app:dialogTitle="@string/app_theme_title"
			app:summary="%s"
			app:icon="@drawable/ic_app_theme"/>
	</PreferenceCategory>

	<PreferenceCategory app:title="@string/shizuku">

		<Preference
			app:key="install_shizuku"
			app:title="@string/install_shizuku"
			app:icon="@drawable/ic_download_shizuku"/>
	</PreferenceCategory>

	<PreferenceCategory app:title="@string/about_header">

		<Preference
			app:key="developer"
			app:title="@string/developer"
			app:summary="Max Díaz (71844656@continental.edu.pe)"
			app:icon="@drawable/ic_dev"/>

		<Preference
			app:key="version"
			app:title="@string/version"
			app:summary="1.0.0"
			app:icon="@drawable/ic_app_version"/>
	</PreferenceCategory>
</androidx.preference.PreferenceScreen>